tests/test_assets/semantic/invalid/expressions/shift_constant_oracles.expected
semantic error at line 23: duplicate switch case
semantic error at line 31: duplicate switch case
semantic error at line 39: duplicate switch case
semantic error at line 47: duplicate switch case
semantic error at line 55: duplicate switch case
semantic error at line 63: duplicate switch case
6 semantic errors generated.
